# deep-coding-agent

./: .gitignore  ARTICLE.md  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: agent.py  config.py  graphify.py  main.py  middleware.py  workspaces.py
frontend/: .env.local.example  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/copilotkit/: route.ts
frontend/components/: ApprovalGate.tsx  DiffView.tsx  EditorPane.tsx  FileTree.tsx  FileViewer.tsx  FolderBrowser.tsx  OpenFileContext.tsx  RepoOpener.tsx  ToolRender.tsx  interruptStore.ts  useRepoWatch.ts
